[BUGFIX] CSS: Default vertical spacing for blocks
Forms, tables, texts need a clear structure and obvious
visual distinction. Our Backend currently does not
deliver strong defaults for extensions.

Many modules already work around this lack of structure
by adding extra spacing and horizontal rules:

- DocumentTemplate::spacer(x-Pixel)
- DocumentTemplate::divider()

This patch brings vertical spacing based on CSS for:

- p
- ul / ol
- dl
- blockquote

Resolves: #48540
Releases: 6.2

--- a/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
+++ b/typo3/sysext/t3skin/extjs/xtheme-t3skin.css
@@ -1316,6 +1316,11 @@ td.x-grid3-hd-over, td.x-grid3-hd-menu-open {
 	background-color:#d8d8d8;
 	border-color:#8d8d8d;
 }
+
+.x-tree ul {
+	margin-bottom: 0;
+}
+
 .x-tree .x-panel-body{
 	background-color:#fff;
 }
